modify food insert page allow to back to main page modify place insert page allow to back to main page
Signed-off-by: niphitphon8bit <niphitphon_nt@hotmail.com>

--- a/src/app/place-insert/place-insert.page.html
+++ b/src/app/place-insert/place-insert.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
+      <ion-back-button defaultHref="/basedata/place" (click)="closeModal()"></ion-back-button>
     </ion-buttons>
     <ion-title>Place Insert</ion-title>
   </ion-toolbar>
