--- a/src/app/food-insert/food-insert.page.html
+++ b/src/app/food-insert/food-insert.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button ></ion-back-button>
+      <ion-back-button defaultHref="/basedata/food-type" (click)="closeModal()"></ion-back-button>
     </ion-buttons>
     <ion-title>food_insert</ion-title>
   </ion-toolbar>
