fixed submit button to color blue instead of green
Signed-off-by: niphitphon8bit <niphitphon_nt@hotmail.com>

--- a/src/app/food-insert/food-insert.page.html
+++ b/src/app/food-insert/food-insert.page.html
@@ -20,5 +20,5 @@
     <ion-input required type="text" [(ngModel)]="name_en" name="name_en"></ion-input>
   </ion-item>
   <br>
-  <ion-button expand="block" color="success" (click)="insert_food_type()">บันทึก</ion-button>
+  <ion-button expand="block" (click)="insert_food_type()">บันทึก</ion-button>
 </ion-content>
