--- a/src/app/bank-insert/bank-insert.page.html
+++ b/src/app/bank-insert/bank-insert.page.html
@@ -32,5 +32,5 @@
     </ion-item>
   </form>
   <br>
-  <ion-button expand="block" type="submit" color="success" (click)="insert_bank()">บันทึก</ion-button>
+  <ion-button expand="block" type="submit" (click)="insert_bank()">บันทึก</ion-button>
 </ion-content>
