--- a/src/app/develops-insert/develops-insert.page.html
+++ b/src/app/develops-insert/develops-insert.page.html
@@ -19,5 +19,5 @@
     </ion-label>
     <ion-input [(ngModel)]="name_en" name="name_en"></ion-input>
   </ion-item>
-  <ion-button expand="block" color="success" (click)="insert_develop()">บันทึก</ion-button>
+  <ion-button expand="block"  (click)="insert_develop()">บันทึก</ion-button>
 </ion-content>
