--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -1,56 +1,13 @@
 <ion-header>
   <ion-toolbar>
-      <ion-buttons slot="start">
-          <ion-back-button defaultHref="/"></ion-back-button>
-        </ion-buttons>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
     <ion-title>major</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
-  <!-- <ion-item-sliding>
-    <ion-item>
-      <ion-label>สาขาวิชา</ion-label>
-      <ion-toggle color="success" checked></ion-toggle>
-    </ion-item>
-    <ion-item-options side="end">
-      <ion-item-option color="danger" (click)="remove_major(skill)"><ion-icon name="trash" ></ion-icon></ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
-
-  <ion-item-sliding>
-  <ion-item>
-    <ion-label>สาขาวิชาวิศวกรรมซอฟต์แวร์</ion-label>
-    <ion-toggle color="success"></ion-toggle>
-  </ion-item>
-  <ion-item-options side="end">
-    <ion-item-option color="danger" (click)="remove_major(skill)"><ion-icon name="trash"></ion-icon></ion-item-option>
-  </ion-item-options>
-</ion-item-sliding>
-
-<ion-item-sliding>
-<ion-item>
-  <ion-label>สาขาวิชาคอมพิวเตอร์ธุรกิจ</ion-label>
-  <ion-toggle color="success"></ion-toggle>
-</ion-item>
-<ion-item-options side="end">
-  <ion-item-option color="danger" (click)="remove_major(skill)"><ion-icon name="trash"></ion-icon></ion-item-option>
-</ion-item-options>
-</ion-item-sliding> -->
-
-<ion-item-sliding *ngFor="let index_major of data_major">
-      <ion-item>
-        <ion-label>{{index_major.title}}</ion-label>
-        <ion-toggle color="success" [(ngModel)]="index_major.status"></ion-toggle>
-      </ion-item>
-      <ion-item-options side="end">
-        <ion-item-option (click)="remove_major(index_major)" color="danger">
-          <ion-icon name="trash"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-  
   <!-- fab placed to the top end -->
   <ion-fab [routerLink]="['/major-insert']" vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button>
@@ -58,6 +15,19 @@
     </ion-fab-button>
   </ion-fab>
 
+  <ion-list>
 
+    <ion-item-sliding *ngFor="let major of majors">
+      <ion-item>
+        <ion-label>{{major.name_th}}</ion-label>
+        <ion-toggle color="success" [(ngModel)]="major.status"></ion-toggle>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option (click)="remove_major(major)" color="danger">
+          <ion-icon name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 
 </ion-content>
