add service of expert type add all color tool bar to all .html add major insert to app.module.ts
Signed-off-by: niphitphon8bit <niphitphon_nt@hotmail.com>

--- a/src/app/bank/bank.page.html
+++ b/src/app/bank/bank.page.html
@@ -1,9 +1,9 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>บัญชีธนาคาร</ion-title>
+    <ion-title>Bank</ion-title>
   </ion-toolbar>
 </ion-header>
 
