--- a/src/app/food-insert/food-insert.page.html
+++ b/src/app/food-insert/food-insert.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/basedata/food-type" (click)="closeModal()"></ion-back-button>
     </ion-buttons>
