--- a/src/app/basedata/basedata.page.html
+++ b/src/app/basedata/basedata.page.html
@@ -1,5 +1,5 @@
-<ion-header  >
-  <ion-toolbar >
+<ion-header>
+  <ion-toolbar color="dark">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
@@ -11,10 +11,11 @@
   <div>
     <ion-row responsive-sm>
       <ion-col>
-        <ion-card class="card" [routerLink]="['/basedata/develops']"routerLinkActive="router-link-active" id="Develops">
+        <ion-card class="card" [routerLink]="['/basedata/develops']" routerLinkActive="router-link-active"
+          id="Develops">
           <ion-card-header>
             <ion-card-title>
-              <ion-icon size="large"  name="construct"></ion-icon> 
+              <ion-icon size="large" name="construct"></ion-icon>
             </ion-card-title>
           </ion-card-header>
           <ion-card-content class="ion-card-content">
@@ -23,10 +24,10 @@
         </ion-card>
       </ion-col>
       <ion-col>
-        <ion-card class="card" [routerLink]="['/basedata/food-type']" routerLinkActive="router-link-active"id="food">
+        <ion-card class="card" [routerLink]="['/basedata/food-type']" routerLinkActive="router-link-active" id="food">
           <ion-card-header>
             <ion-card-title>
-              <ion-icon size="large"  name="pizza"></ion-icon>
+              <ion-icon size="large" name="pizza"></ion-icon>
             </ion-card-title>
           </ion-card-header>
           <ion-card-content class="ion-card-content">
@@ -37,48 +38,49 @@
     </ion-row>
     <ion-row responsive-sm>
       <ion-col>
-        <ion-card class="card" [routerLink]="['/basedata/place']" routerLinkActive="router-link-active"id="place">
+        <ion-card class="card" [routerLink]="['/basedata/place']" routerLinkActive="router-link-active" id="place">
           <ion-card-header>
             <ion-card-title>
-              <ion-icon size="large"  name="pin"></ion-icon>
+              <ion-icon size="large" name="pin"></ion-icon>
             </ion-card-title>
           </ion-card-header>
           <ion-card-content class="ion-card-content">
             <a></a>
-            <font style="font-size: 15px; margin-left:25%;">place</font>  
+            <font style="font-size: 15px; margin-left:25%;">place</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
       <ion-col>
-        <ion-card class="card" [routerLink]="['/basedata/major']" routerLinkActive="router-link-active"id="major">
+        <ion-card class="card" [routerLink]="['/basedata/major']" routerLinkActive="router-link-active" id="major">
           <ion-card-header>
             <ion-card-title>
-              <ion-icon size="large"  name="trophy"></ion-icon>
+              <ion-icon size="large" name="trophy"></ion-icon>
             </ion-card-title>
           </ion-card-header>
           <ion-card-content class="ion-card-content">
             <a></a>
-            <font style="font-size: 15px; margin-left:25%;">Major</font>   
+            <font style="font-size: 15px; margin-left:25%;">Major</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
     </ion-row>
     <ion-row responsive-sm>
       <ion-col>
-        <ion-card class="card" [routerLink]="['/basedata/bank']" routerLinkActive="router-link-active"id="bank">
+        <ion-card class="card" [routerLink]="['/basedata/bank']" routerLinkActive="router-link-active" id="bank">
           <ion-card-header>
             <ion-card-title>
-              <ion-icon size="large"  name="cash"></ion-icon>
+              <ion-icon size="large" name="cash"></ion-icon>
             </ion-card-title>
           </ion-card-header>
-          <ion-card-content class="ion-card-content"> 
+          <ion-card-content class="ion-card-content">
             <a></a>
             <font style="font-size: 15px; margin-left:25%;">Bank</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
       <ion-col>
-        <ion-card class="card" [routerLink]="['/basedata/expert-type']" routerLinkActive="router-link-active"id="expert">
+        <ion-card class="card" [routerLink]="['/basedata/expert-type']" routerLinkActive="router-link-active"
+          id="expert">
           <ion-card-header>
             <ion-card-title>
               <ion-icon size="large" ios="ios-person" md="md-person"></ion-icon>
@@ -87,21 +89,6 @@
           <ion-card-content class="ion-card-content">
             <a></a>
             <font style="font-size: 15px; margin-left:20%;">Expert</font>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-    <ion-row responsive-sm>
-      <ion-col>
-        <ion-card class="card" [routerLink]="['/basedata/skill']" routerLinkActive="router-link-active">
-          <ion-card-header>
-            <ion-card-title>
-              <ion-icon size="large" ios="ios-person" md="md-person"></ion-icon>
-            </ion-card-title>
-          </ion-card-header>
-          <ion-card-content class="ion-card-content">
-            <a></a>
-            <font style="font-size: 10px; margin-left:10%;">ทักษะ</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
