--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
@@ -9,13 +9,25 @@
 
 <ion-content>
   <!-- fab placed to the top end -->
-  <ion-fab [routerLink]="['/major-insert']" vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="insert_major_modal()">
     <ion-fab-button>
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
   <ion-list>
+
+    <ion-item-sliding *ngFor="let major of db_majors">
+      <ion-item>
+        <ion-label>{{major.mj_name_th}}</ion-label>
+        <ion-toggle color="success" [(ngModel)]="major.status" (click)="change(major)"></ion-toggle>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option (click)="remove_db_bank(major)" color="danger">
+          <ion-icon name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
 
     <ion-item-sliding *ngFor="let major of majors">
       <ion-item>
