--- a/src/app/expert-type/expert-type.page.html
+++ b/src/app/expert-type/expert-type.page.html
@@ -12,7 +12,7 @@
   <ion-list>
     <ion-item-sliding *ngFor="let expert of db_expert_types">
       <ion-item>
-        <ion-label>{{expert.ept_name_th}}</ion-label>
+        <ion-label>{{expert.ept_name_en}}</ion-label>
         <ion-toggle color="success" [(ngModel)]="expert.status"></ion-toggle>
       </ion-item>
       <ion-item-options side="end">
@@ -24,7 +24,7 @@
 
     <ion-item-sliding *ngFor="let expert of expert_types">
       <ion-item>
-        <ion-label>{{expert.name_th}}</ion-label>
+        <ion-label>{{expert.name_en}}</ion-label>
         <ion-toggle color="success" [(ngModel)]="expert.status"></ion-toggle>
       </ion-item>
       <ion-item-options side="end">
