--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -19,7 +19,7 @@
 
     <ion-item-sliding *ngFor="let major of db_majors">
       <ion-item>
-        <ion-label>{{major.mj_name_en}}</ion-label>
+        <ion-label>{{major.mj_name_th}}</ion-label>
         <ion-toggle color="success" [(ngModel)]="major.status" (click)="change(major)"></ion-toggle>
       </ion-item>
       <ion-item-options side="end">
@@ -31,7 +31,7 @@
 
     <ion-item-sliding *ngFor="let major of majors">
       <ion-item>
-        <ion-label>{{major.name_en}}</ion-label>
+        <ion-label>{{major.name_th}}</ion-label>
         <ion-toggle color="success" [(ngModel)]="major.status"></ion-toggle>
       </ion-item>
       <ion-item-options side="end">
