--- a/src/app/expert-in/expert-in.page.html
+++ b/src/app/expert-in/expert-in.page.html
@@ -20,9 +20,22 @@
 
 
 
+        <ion-item-sliding *ngFor="let expert of db_expert_in">
+            <ion-item>
+                <ion-label>{{expert.ep_fname}}</ion-label>
+                <ion-toggle color="success" [(ngModel)]="expert.status" (click)="change(expert)"></ion-toggle>
+            </ion-item>
+            <ion-item-options side="end">
+                <ion-item-option (click)="remove_expert_in(expert)" color="danger">
+                    <ion-icon name="trash"></ion-icon>
+                </ion-item-option>
+            </ion-item-options>
+        </ion-item-sliding>
+
+
         <ion-item-sliding *ngFor="let expert of experts">
             <ion-item>
-                <ion-label>{{expert.title}}</ion-label>
+                <ion-label>{{expert.name_th}}</ion-label>
                 <ion-toggle color="success" [(ngModel)]="expert.status"></ion-toggle>
             </ion-item>
             <ion-item-options side="end">
@@ -38,7 +51,7 @@
 
     </ion-list>
 
-    <ion-fab vertical="bottom" horizontal="end" slot="fixed" [routerLink]="['/expert-in-insert']">
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="insert_expert_modal()">
         <ion-fab-button>
             <ion-icon name="add"></ion-icon>
         </ion-fab-button>
