Food Type : change_status_food_type 13-01-2020

--- a/src/app/food-insert/food-insert.page.html
+++ b/src/app/food-insert/food-insert.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/basedata/food-type" (click)="closeModal()"></ion-back-button>
     </ion-buttons>
-    <ion-title>food_insert</ion-title>
+    <ion-title>เพิ่มประเภทอาหาร</ion-title>
   </ion-toolbar>
 </ion-header>
 
