--- a/src/app/food-type/food-type.page.html
+++ b/src/app/food-type/food-type.page.html
@@ -17,9 +17,12 @@
   <ion-item-sliding *ngFor="let food_type of food_types">
     <ion-item>
       <ion-label>{{food_type.ft_name_th}}</ion-label>
-      <ion-toggle color="success" [(ngModel)]="food_type.ft_status" (ionChange)="change_status_food_type(food_type)"></ion-toggle>
+      <ion-toggle color="success" [(ngModel)]="food_type.ft_status" (click)="change_status_food_type(food_type)"></ion-toggle>
     </ion-item>
     <ion-item-options side="end">
+      <ion-item-option (click)="edit_food_type(food_type)" color="warning">
+        <ion-icon name="create"></ion-icon>
+      </ion-item-option>
       <ion-item-option (click)="remove_food_type(food_type)" color="danger">
         <ion-icon name="trash"></ion-icon>
       </ion-item-option>
