--- a/src/app/expert-in-insert/expert-in-insert.page.html
+++ b/src/app/expert-in-insert/expert-in-insert.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar color="dark">
         <ion-buttons slot="start">
-            <ion-back-button defaultHref="/"></ion-back-button>
+            <ion-back-button defaultHref="/" (click)="closeModal()"></ion-back-button>
         </ion-buttons>
         <ion-title>expert_in_insert</ion-title>
     </ion-toolbar>
