--- a/src/app/expert-in/expert-in.page.html
+++ b/src/app/expert-in/expert-in.page.html
@@ -26,7 +26,7 @@
                 <ion-toggle color="success" [(ngModel)]="expert.status" (click)="change(expert)"></ion-toggle>
             </ion-item>
             <ion-item-options side="end">
-                <ion-item-option (click)="remove_expert_in(expert)" color="danger">
+                <ion-item-option (click)="remove_db_expert_in(expert)" color="danger">
                     <ion-icon name="trash"></ion-icon>
                 </ion-item-option>
             </ion-item-options>
