--- a/src/app/place-insert/place-insert.page.html
+++ b/src/app/place-insert/place-insert.page.html
@@ -3,24 +3,22 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/basedata/place" (click)="closeModal()"></ion-back-button>
     </ion-buttons>
-    <ion-title>Place Insert</ion-title>
+    <ion-title>เพิ่มสถานที่</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <form>
-    <ion-list>
-      <ion-item>
-        <ion-label position="floating">ชื่อ (ภาษาไทย) <ion-text color="danger">*</ion-text>
-        </ion-label>
-        <ion-input required type="text" [(ngModel)]="name_th" name="name_th"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label position="floating">ชื่อ (อังกฤษ)<ion-text color="danger">*</ion-text>
-        </ion-label>
-        <ion-input required type="text" [(ngModel)]="name_eng" name="name_eng"></ion-input>
-      </ion-item>
-    </ion-list>
-    <ion-button expand="block" type="submit" (click)="insert_place()">บันทึก</ion-button>
-  </form>
+
+  <ion-item>
+    <ion-label>ชื่อ (ภาษาไทย) <ion-text color="danger">*</ion-text>
+    </ion-label>
+    <ion-input required type="text" [(ngModel)]="name_th" name="name_th"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label>ชื่อ (ภาษาอังกฤษ) <ion-text color="danger">*</ion-text>
+    </ion-label>
+    <ion-input required type="text" [(ngModel)]="name_en" name="name_en"></ion-input>
+  </ion-item>
+  <br>
+  <ion-button expand="block" (click)="insert_place()">บันทึก</ion-button>
 </ion-content>
