--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -9,37 +9,25 @@
 
 <ion-content>
   <!-- fab placed to the top end -->
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="insert_major_modal()">
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="insert_major()">
     <ion-fab-button>
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
-  <ion-list>
-
-    <ion-item-sliding *ngFor="let major of db_majors">
-      <ion-item>
-        <ion-label>{{major.mj_name_th}}</ion-label>
-        <ion-toggle color="success" [(ngModel)]="major.status" (click)="change(major)"></ion-toggle>
-      </ion-item>
-      <ion-item-options side="end">
-        <ion-item-option (click)="remove_db_bank(major)" color="danger">
-          <ion-icon name="trash"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
 
     <ion-item-sliding *ngFor="let major of majors">
       <ion-item>
-        <ion-label>{{major.name_th}}</ion-label>
-        <ion-toggle color="success" [(ngModel)]="major.status"></ion-toggle>
+        <ion-label>{{major.mj_name_th}}</ion-label>
+        <ion-toggle color="success" [(ngModel)]="major.mj_status" (click)="change_status_major(major)"></ion-toggle>
       </ion-item>
       <ion-item-options side="end">
-        <ion-item-option (click)="remove_major(major)" color="danger">
+        <ion-item-option (click)="edit_major(major)" color="warning">
+          <ion-icon name="create"></ion-icon>
+        </ion-item-option>
+        <ion-item-option (click)="remove_majors(major)" color="danger">
           <ion-icon name="trash"></ion-icon>
         </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
-  </ion-list>
-
 </ion-content>
