update expert_in insert delete Signed-off-by: nopnop334 <comcomnop@gmail.com>

--- a/src/app/expert-in-update/expert-in-update.page.html
+++ b/src/app/expert-in-update/expert-in-update.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-back-button defaultHref="/expert/expert-in" (click)="closeModal()"></ion-back-button>
         </ion-buttons>
-        <ion-title>expert_in_insert</ion-title>
+        <ion-title>expert_in_edit</ion-title>
     </ion-toolbar>
 </ion-header>
 
@@ -25,7 +25,7 @@
 
 
     <div class="ion-padding">
-        <ion-button expand="block" (click)="insert_expert_in()">บันทึก</ion-button>
+        <ion-button expand="block" (click)="update_expert_in()">บันทึก</ion-button>
     </div>
 
 
