--- a/src/app/expert-type-insert/expert-type-insert.page.html
+++ b/src/app/expert-type-insert/expert-type-insert.page.html
@@ -3,28 +3,23 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/basedata/expert-type" (click)="closeModal()"></ion-back-button>
     </ion-buttons>
-    <ion-title>expert_type_insert</ion-title>
+    <ion-title>เพิ่มประเภทวิทยากร</ion-title>
   </ion-toolbar>
 </ion-header>
 
 
 <ion-content>
-  <form>
-    <ion-list>
-      <ion-item>
-        <ion-label position="floating">ชื่อประเภทวิทยากร (ภาษาไทย) <ion-text color="danger">*</ion-text>
-        </ion-label>
-        <ion-input required type="text" [(ngModel)]="name_th" name="name_th"></ion-input>
-      </ion-item>
 
-      <ion-item>
-        <ion-label position="floating">ชื่อประเภทวิทยากร (ภาษาอังกฤษ) <ion-text color="danger">*</ion-text>
-        </ion-label>
-        <ion-input required type="text" [(ngModel)]="name_en" name="name_en"></ion-input>
-      </ion-item>
-    </ion-list>
-  
-    <ion-button expand="block" type="submit" (click)="insert_expert_type()">บันทึก</ion-button>
-  </form>
-
+  <ion-item>
+    <ion-label>ชื่อ (ภาษาไทย) <ion-text color="danger">*</ion-text>
+    </ion-label>
+    <ion-input required type="text" [(ngModel)]="name_th" name="name_th"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label>ชื่อ (ภาษาอังกฤษ) <ion-text color="danger">*</ion-text>
+    </ion-label>
+    <ion-input required type="text" [(ngModel)]="name_en" name="name_en"></ion-input>
+  </ion-item>
+  <br>
+  <ion-button expand="block" (click)="insert_expert_type()">บันทึก</ion-button>
 </ion-content>
