--- a/src/app/expert-type/expert-type.page.html
+++ b/src/app/expert-type/expert-type.page.html
@@ -3,42 +3,30 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>expert_type</ion-title>
+    <ion-title>ประเภทวิทยากร</ion-title>
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content>
-
-  <ion-list>
-    <ion-item-sliding *ngFor="let expert of db_expert_types">
-      <ion-item>
-        <ion-label>{{expert.ept_name_th}}</ion-label>
-        <ion-toggle color="success" [(ngModel)]="expert.status"></ion-toggle>
-      </ion-item>
-      <ion-item-options side="end">
-        <ion-item-option (click)=" remove_db_expert_types(expert)" color="danger">
-          <ion-icon name="trash"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-
-    <ion-item-sliding *ngFor="let expert of expert_types">
-      <ion-item>
-        <ion-label>{{expert.name_th}}</ion-label>
-        <ion-toggle color="success" [(ngModel)]="expert.status"></ion-toggle>
-      </ion-item>
-      <ion-item-options side="end">
-        <ion-item-option (click)=" remove_expert_type(expert)" color="danger">
-          <ion-icon name="trash"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-
-  </ion-list>
-
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="insert_expert_type_modal()">
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="insert_expert_type()">
     <ion-fab-button>
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
+
+  <ion-item-sliding *ngFor="let expert_type of expert_types">
+    <ion-item>
+      <ion-label>{{expert_type.ept_name_th}}</ion-label>
+      <ion-toggle color="success" [(ngModel)]="expert_type.ept_status" (click)="change_status_expert_type(expert_type)"></ion-toggle>
+    </ion-item>
+    <ion-item-options side="end">
+      <ion-item-option (click)="edit_expert_type(expert_type)" color="warning">
+        <ion-icon name="create"></ion-icon>
+      </ion-item-option>
+      <ion-item-option (click)="remove_expert_type(expert_type)" color="danger">
+        <ion-icon name="trash"></ion-icon>
+      </ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
 </ion-content>
